# beer-trip

./: CMakeLists.txt  README.md  beer.db
src/: CMakeLists.txt  main.cpp
